--- a/source/Resources/index.html
+++ b/source/Resources/index.html
@@ -26,7 +26,7 @@
                 width: 800px;
                 height: 450px;
             }
-            .main{
+            .container {
                 text-align: center;
                 margin-top: 80px;
             }
@@ -34,7 +34,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="main">
+        <div class="container">
             <h1>Welcome to Swab2</h1>
             <p>Please load html file.</p>
             <input type="button" value="Load!" onclick="load()">
