JSからコマンド実行ができる関数追加 オプション追加(未実装)

--- a/source/Resources/index.html
+++ b/source/Resources/index.html
@@ -14,6 +14,11 @@
                 csCallee.winMessageBox("JavaScriptからC#メソッドを呼び出すテスト");
             }
 
+            function cmd() {
+                csCallee.command("cd").then((resilt) => csCallee.winMessageBox(resilt))
+                //csCallee.command("J:/Programming/Python/Tool/tamiyasu_talk/vrx.exe", "テストこんにちは");
+            }
+
             function load(){
                 csCallee.loadHTML();
             }
