オプション機能の実装 Template.htmlを出力後、指定のテキストエディタで開く設定追加(オプション機能) それに伴いJsonファイルのメンバー追加 htmlファイルを開いた後のリロードタイミング変更

--- a/source/Resources/setting.html
+++ b/source/Resources/setting.html
@@ -10,6 +10,9 @@
                 await CefSharp.BindObjectAsync("csCallee");
                 csCallee.setWinSize(520, 250);
                 csCallee.setNotResize(true);
+                csCallee.isOpenTextEditor().then(isOpen => $("[name=check1]").prop("checked", isO
+                ));
+                csCallee.getTextEditorPath().then(path => $("[name=path]").val(path));
                 check();
             }
 
